# nqgym

./: CONTRIBUTING.MD  LICENSE  MANIFEST.in  Makefile  README.md  setup.cfg
nqgym/: cli.py  config.py
nqgym/templates/nqproject/: cookiecutter.json
nqgym/templates/nqproject/hooks/: pre_gen_project__.py
nqgym/templates/nqproject/{{cookiecutter.package_name}}/: MANIFEST.in  Makefile  README.md  setup.cfg
nqgym/templates/nqproject/{{cookiecutter.package_name}}/tests/: test_cli.py
nqgym/templates/nqproject/{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: cli.py  hello.py
tests/: test_cli.py
