[metadata]
name = nqgym
version = attr: nqgym.__version__
url = https://github.com/navy-xie/nqgym
author = Navy Xie
author_email = navy.xie@qq.com
description = A Python project generator.
long_description = file: README.md
license = MIT
project_urls = https://github.com/navy-xie/nqgym
    Documentation = https://github.com/navy-xie/nqgym/blob/main/README.md
    Sources = https://github.com/navy-xie/nqgym
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python
    Topic :: Software Development
keywords =
    Python
    generator
    projects
    project templates
    skeleton
    scaffolding
    package
    cookiecutter

[options]
python_requires = >= 3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    cookiecutter >= 1.7.3

[options.entry_points]
console_scripts =
    nqgym = nqgym.cli:cli

[options.extras_require]
dev =
    pytest >= 6.2.5
    coverage >= 5.5
    pylint >= 2.10.1
    pycodestyle >= 2.7.0
    twine >= 3.6.0

[tool:pytest]
addopts =
    --verbose
    --doctest-modules
testpaths = tests
doctest_optionflags = ELLIPSIS
filterwarnings =
    error

[coverage:run]
branch = true
source =
    nqgym
    tests
